[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["jpmarques <jpmarquesdeoliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyright = "^1.1.350"
pytest = "^8.0.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
